--- a/ننګرهار_ولایت.mw
+++ b/ننګرهار_ولایت.mw
@@ -81,11 +81,11 @@
 
 ==انځوریز البوم==
 <gallery>
-Image:A view from Kabul InterContinental.jpg|View from Kabul InterContinental 
-Image:Downtown area of Kabul.jpg|Section of downtown area of Kabul
-File:Mountains of Kabul.jpg
-File:Kabul City Center.jpg
-File:Last-stand.jpg
+File:Torkham gate, Afghan, Pakistan border.jpg
+File:Torkham border crossing.jpg
+File:Irrigated farm fields - Afghanistan - 11-02-2008.jpg
+File:Jalalabad in Nangarhar Province.jpg
+File:Lake in Nangarhar province of Afghanistan.jpg
 Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
 File:Serena Hotel in Kabul.jpg
 File:Kabul Baghe Babur.jpg
