--- a/ننګرهار_ولایت.mw
+++ b/ننګرهار_ولایت.mw
@@ -13,7 +13,7 @@
 '''ننګرهار''' د افغانستان په څلوردېرشو ولايتونو کې د يو ولايت نوم دی. دا ولايت ددغه هېواد په ختيځه سيمه كې پروت دى او ددغه ولايت د پلازمېنې نوم [[جلالکوټ]] دی. د اټکل له مخې ددې ولايت د وګړو شمېر له ۲۰۰۰۰۰۰ نه هم ډېره ده.
 
 
-== نوم ==
+== آرپوهه ==
 په تاريخي لحاظ دغه ولايت  په بېلا بېلو نومونو (نګار، نګارا ، نګاراهار، نګر....) ياد شوی . له دغه ولايت څخه پر  ١٣٤٥  کي لومړی  لغمان  او بيا پر ١٣٤٨ ترې کونړ بېل  او ځانګړي ولايتونه  وګڼل شول. ددغه ولايت تاريخي سابقه يې د پخوانيو آريايانو له مدنيت سره اړيكه لري.د بوديزم دين په دې سيمه كې ډېره پرمختيا كړېده. د چينايي ګرځند هېوان تسنګ له قوله، نګارهارا Nagarahara د كلمې يادونه د اوستا په كتاب كې شوېده چې مطلب يې همدغه د ننګرهارسيمه ده. د لرغون پېژندونكو له كيدنو څرګندېږي چې له پينځلس زرو څخه زياتې وړې او منځني كچ مجسمې په مختلفو حالاتو كې له ننګرهار، په ځانګړي توګه له هډې څخه په لاس راغلي دي چې ډېره برخه يې د پاريس موزيم ته وړل شوي دي.دامجسمې د مميلادي دوېمې او شپږمې پېړۍ پورې اړه لري. يو بل ګرځند فاهبين دا آثار د دوهمې ميلادي پېړۍ دمخه بولي.
 
 == د بوديزم اهم ټاټوبې ==
