--- a/ننګرهار_ولایت.mw
+++ b/ننګرهار_ولایت.mw
@@ -24,7 +24,7 @@
 
 د جلالکوټ سوېل لوري ته اته کيلو ميټره لري هډه پرته ده چي پکي  د بودايي دوري  ډير ښه په زړه پوري  اثار خوندي وو. له ډير و لري لري ملکونو  څخه به خلک  د دي ليدو ته راتلل ، دي سيمي ته د اسلام تر رارسيدو پخوا ننګرهار د بودايي معدنيت  مهم مرکز او د  ساکياموني سرهر تاګونم بودا  د کوپړۍ يو هډوکي دلته ښخ وو، ځکه هډه بلل کيدله
 
-== ولايتي پلازمېنه ==
+== د ولايت پلازمېنه ==
 د ننګرهار ولايت مركز د جلالکوټ (جلال اباد) ښار دى. جلالکوټ پر (٩٨٩-٩٩٠ه ق کلونو کي  او شمالي هندوستان  د پاچا  جلال الدين اکبر مغل (٩٦٣-١٠١٤ه ق ) په حکم د کابل صوبي ( ولايت ) ديوان ( مستوفي ) خواجه شمس الدين خواني( ١٠٠٨ ه ق ) جوړ کړي دی. دا ښار په ۱۸۸۰ زېږيز كال کې د سېلاب په اغيز وران شو او د نوي ښاري پلان له مخې بيا ورغول شو. 
 
 جلالکوټ پنځه ناحيې لري  ننګرهار پخوا هغه سيمه وه چي له سروبي څخه  د خيبر تر تورخمه غځيدلي وه  او د جنوب لخوا  سپين غر پري راګرځيدلي  په تاريخي لخاظ ننګرهار  د پښتو ژبي پلار  خوشال خان خټک ( ١٠٢٢-١١٠٠ه ق کي هم داسي ياد کړي:
