*Empty MediaWiki Message*

--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -1,4 +1,4 @@
-قريب الرحمن سعيد (۲۰ د جون ۱۹۵۲) د ننګرهار ولايت يو پښتون ژورنالست، ليکوال او ژباړونکی دی. هغه په افغانستان کې دننه او د افغانستان نه دباندې په افغاني رسنيو کې منظمې ليکنې هم خپرې کړي او د نورو ژبو نه يې يو شمېر کتابونه هم پښتو ژبې ته ژباړلي دي.
+'''قريب الرحمن سعيد''' (۲۰ د جون ۱۹۵۲) د ننګرهار ولايت يو پښتون ژورنالست، ليکوال او ژباړونکی دی. هغه په افغانستان کې دننه او د افغانستان نه دباندې په افغاني رسنيو کې منظمې ليکنې هم خپرې کړي او د نورو ژبو نه يې يو شمېر کتابونه هم پښتو ژبې ته ژباړلي دي.
 
 == مخينه ==
 د قريب الرحمن سعيد پخوانی تخلص مولوي زاده ؤ چې د جهاد په وختونو کې يې سعيد غوره کړی. هغه د مولوي ګل رحمن ديوبندي زوی دی. نوموړی د افغانستان د ننګرهار ولايت د روداتو د ولسوالۍ په شارسول کلي کې زېږېدلی دی. د نوموړي پلار مولوي ګل رحمن ديوبندي د خپل وخت يو لوی عالم، ښه ليکوال او شاعر ؤ. 
