*Empty MediaWiki Message*

--- a/ابو_الاعلى_مودودي.mw
+++ b/ابو_الاعلى_مودودي.mw
@@ -1,14 +1,151 @@
+[[انځور:Maududi.jpg|left|thumb|300px| علامه مولانا مودودي]]
+د مولانا سېد '''ابو الاعلی مودودي''' شمار د شلمې پېړۍ په هغو نامتو روڼ آندو او اسلامپوهانو کې راځي، چا چې په خپل شپېته کلن پوهنیز، ادبي، دیني، ملي او ټولنیز ژوند په هر هړخ باندې رڼا اچولې، او څېړنیزه لیکنې یې پکې کړي دي.
+
+مولانا مودودي یو عبقري، د ډول، ډول صلاحیتونو څښتن، د معاصرو اسلامي غورځنګونو لارښود او سرچینه او د اسلام سم او ژور پوه او عالم ؤ. ده ته څښتن تعالی داسې وړتياوې ورکړي وې چې د اسلامی غورځنګ د لارښوونې لپاره داسې پالېسۍ او لارې جوړې کړي، چې دګوتو په شمېر کلونو کې لوړو درجو ته ورسېږي.
+
+==د ژوند لومړي حالات==
+د یوه انسان عبقریت او لوړوالي نښې له هماغه کوشنیتوب څخه ښکاري، نو په همدې ډول د علامه مودودي دسې ستر او اریانوونکي کارونه ترسره کړه، چې دا ډول کارونه د نورو کوشنیانو له وسې بهر خبره وي.
+
+د لومړنیو زده کړو په دور کې د هغه امتیازي حیثیت په خپل ځای پاتې ؤ، هغه یواځې د دیارلسو کالو په عمر د اتم ټولګي زد کوونکې ؤ، او په همدې کوشنیوالي کې یې لیکنې کولې او د ښوونځي په غونډو کې به یې ویناوې کولې.
+
+
+==باندنيو هېوادو ته سفرونه==
+
+د ۱۹۵۶ز او ۱۹۷۴ز کلونو ترمنځ علامه مودودي د نړۍ کوټ، کوټ ته سفرونه وکړل،او په خپلو مختلفو سفرونو کې قاهرې، دمشق، عمان، مکه معظمه، مدینه منوره، کویټ، ربات، استنبول، لندن، نیویارک، ټورنټو او نورو ښارونو سره سره، ډېرو نړیوالو مرکزونو کې لېکچرونه ورکړي، په همدې کلونو کې یې په لسو نړیوالو کانفرانسونو کې ګډون وکړ، او 
+
+===په نورو ژبو کې د مولانا د لیکنو ژباړې===
+
+د علامه  مودودي لیکنې د نړۍ ډېرو ژبو ته ژباړل شوي، چې ددې ډلې څڅه پښتو، عربي، انګرېزي، پاړسي، ترکي، بنګالي، جرمني،فرانسوي، هندي، جاپاني، سواحلي، تاملي، تېلګو په ګډون ۲۲ څخه زیاتو ژبو ته ژباړل شوي دي. د یادولو وړ ده، چې د علامه مودودي کتابونه د مدینې منورې، ریاض، سوډان، مصر او نورو اسلامي هېوادونو په پوهنتونو په ښوونیز نصاب کې شامل کړای شوي دي.
+
+==مړینه==
+
+په ۱۹۷۹ز کال علامه مودوي د ګردې او زړه ل رنځ څخه سخت په تکلیف کې شو، نو دده زوی (چې په امریکا کې رنځپوه) ؤ څنګ ته ولېږل شو. د څو جراحي عملیاتو کولو څخه وروسته هم ونه رغېد، او د نوموړو ټپونو څخه په همدې کال د ستمبر په ۲۲مه نیټه د ۷۶ کلونو په عمر ومړ. لومړنۍ جنازه یې د نیویارک په بفیلو ښارګوټي کې وشوه، او بیا پاکستان ته په راوړو سره یې د لاهور ښار په قذافي لوبغالي کې د قتر پوهنتون مرستیال رییس (د شام هېواد د اخوان المسلمون پخوانې لارښود) علامه یوسف قرضاوي لخوا د زرګونو مسلمانانو په شتون کې وشوه، او هورې په منصوره کې خاورو ته وسپارل شو.
+
+==د مودوي فلسفي نظریات==
+
+===د څښتن تعالی تصور===
+
+===د انسان پیداېښت===
+د انسان د پېداېښت په اړه هر پیر کې ډول، ډول نظریات وړاندې شوې دي. چا انسان د نور نظام په څېر یو حادثه او پېښه وګڼله، او هغه دا، چې انسان په خپل سر پیدا شو، او دده په پیداېښت کې د څښتن هېڅ سر و کار نه ؤ.
+
+د انسان د پیداېښت په اړه مودودي یو ځانګړې نظریه لري. دې وایی، چې انسان له کومې مادې څخه په خپل سرهېڅکله هم نشي پیداکېدای.
+
+==ادبي ژوند او لیکنې==
+* [[تفہیم القرآن]] (6 ټوکه)
+* [[تفہیمات]] (5 ټوکه)
+* [[رسائل و مسائل]] (5 ټوکه)
+* [[سیرت سرور عالم]] (2 ټوکه)
+* [[پردہ (کتاب)|پردہ]]
+* [[الجہاد فی الاسلام]]
+* [[تنقیحات]]
+* [[مسئلہ قومیت]]
+* [[خطبات]]
+* [[دینیات]]
+* [[شہادت حق]]
+* [[دین حق]]
+* [[سلامتی کا راستہ]]
+* [[بناؤ اور بگاڑ]]
+* [[اسلام اور جاہلیت]]
+* [[اسلام کا اخلاقی نقطہ نظر]]
+* [[تحریک اسلامی: کامیابی کی شرائط]]
+* [[اسلام کا نظام حیات]]
+* [[اسلام کا سرچشمہ قوت]]
+* [[سنت کی آئینی حیثیت]]
+* [[اسلامی تہذیب اور اس کے اصول و مبادی]]
+* [[خلافت و ملوکیت]]
+* [[حقوق الزوجین (کتاب)|حقوق الزوجین]]
+* [[سود (کتاب)|سود]]
+* [[معاشیات اسلام]]
+* [[اسلام اور ضبط ولادت]]
+* [[شرکت و مضاربت کے چند شرعی اصول]]
+* [[مسئلہ ملکیت زمین]]
+* [[ہندوستان کا صنعتی زوال اور اس کے اسباب]]
+* [[اسلامی عبادات پر ایک تحقیقی نظر]]
+* [[قرآن کی چار بنیادی اصطلاحیں]]
+* [[تجدید و احیائے دین]]
+* [[تعلیمات (کتاب)|تعلیمات]]
+* [[سانحہ مسجد اقصی(کتاب)| سانحہ مسجد اقصی]]
+* [[اسلامی کا نظریہ سیاسی]]
+* [[اسلامی سیاست]]
+* [[خطبات یورپ]]
+* [[خطبات حرم]]
+
+==د علامه مودودي پښتو ژباړل شوي کتابونه==
+#اسلامي سياست - ليکوال - مولانا گوهر الرحمٰن- ژباړن - استاد قريب الرحمن سعيد
+#د سلامتې لار
+#یو خطب
+#د حق شادت
+#د طاقت اصلي سرچشمه
+#محمدي رسالت د پوهې په رڼا کې
+#اسلام او جاهلیت
+#مطالبات
+#پرده
+#خطبات
+#اسلامي معیشت
+#اسلامي جهاد
+#د دعوت اسلامي درې نکتې
+
+==دا هم وګورﺉ==
+* [[جماعت اسلامي]]
+* [[اخوان المسلمون]]
+* [[سید قطب]]
+* [[حسن البنا]]
+* [[یوسف القرضاوی]]
+* [[عبدالله عزام]]
+* [[امین احسن اصلاحي]]
+* [[ډاکټر  اسرار احمد]]
+
+
+==باندنۍ تړنې==
+
+* [http://www.maududi.org/ د علامه مودودي ژوند] دمودودي په اړه یو ښه ګورتپاڼه
+* [http://ahadees.quranurdu.com/books/urdu_books/ مولانا مودودي کتابونه په  PDF فارمېټ کې] 
+* [http://globalwebpost.com/farooqm/writings/islamic/maududi-faisalprize.htm/ مولانا مودودی او شاہ فیصل انعام] لیکوال: ډاکټر عمر فاروق
+* [http://www.islamicinterlink.com/author/maudoodi.html/ سید ابو الاعلی مودودی] 
+* [http://www.tafheem.net/main.html/ تفہیم القرآن انگریزی ژباړه] 
+* [http://www.jamaat.org/overview/writings.html/ د مولانا مودودي په اړه لکلي کتابونه]
+* [http://www.tazkeer.org/ د مولانا خطبات] 
+* [http://news.bbc.co.uk/1/hi/uk/4424208.stm/ په اسلامي  فکر د مودودی اغیزې] بی بی سی 
+* [http://www.islamunveiled.org/eng/ebooks/maryamj/maryamj.htm/ مریم جمیلې سره لیکنۍ اړیکه]
+
+==سرچینې==
+
+# علم کلام، لیکوال: صفدر علي، چاپځای: فاروق سنز، ۱۶ الکریم مارکېټ-اردو بازار، لاهور.
 
 
 
 
 
+{| class="toccolours" style="margin: 0.5em auto; clear: both; font-size: 100%; text-align: center;"
+|-
+! style="background:gold; font-size: larger;" | [[:category:مسلمان فیلسوفان|مسلمان فیلسوفان]] 
+|-
+| [[Image:Ibn rushd1.jpg|90px|]]
+|-
+|[[يعقوب كندي]] | [[ابن سینا بلخي]] | [[ابن عربي]] | [[ابي نصر الفارابي]] | [[غزالي]] | [[ابن خلدون]] | [[ابن رشد]] | [[ابن طفیل]] | [[علامه اقبال]] | [[سيد جمال الدين افغاني]]| [[حمزه شينواری|امير حمزه شينوارې]] | [[امام فخر الدين رازي]] | [[رابعه بلخي]] | [[غني خان]] | [[ابو الاعلى مودودي]] | [[شاه ولي الله]] | {[[سېد محمد طباطبايي]] | [[عمر خيام]] |[[ابن مسكوی]] | [[سېد حسن نصر]] | [[جلال الدین رومي]] |[[شقیق بلخي]] | [[شېخ الاشراق سهروردي]]
+|-
+|}
 
 
 
 
+[[وېشنيزه:فلسفه]]
+[[وېشنيزه:ختیځ فیلسوفان]]
+[[وېشنيزه:هندي فیلسوفان]]
+[[وېشنيزه:مسلمان فیلسوفان]]
+[[وېشنيزه:اسلامي روڼ اندي]]
+[[وېشنيزه:د اسلامی غورځنګ لارښودان]]
+[[وېشنيزه:مفسرین]]
+[[وېشنيزه:متکلمین]]
+[[وېشنيزه:جماعت اسلامي]]
+[[وېشنيزه:پاکستاني سیاستپوهان]]
 
-
-
-
-[[category: مسلمان فیلسوفان]]
+[[ar:أبو الأعلى المودودي]]
+[[de:Sayyid Abul Ala Maududi]]
+[[en:Abul Ala Maududi]]
+[[fr:Sayyid Abul Ala Maududi]]
+[[id:Abul A'la Maududi]]
+[[it:Abu l-A'la Maududi]]
+[[ml:അബുല്‍ അഅ‌ല മൗദൂദി]]
+[[ms:Sayyid Abul Ala Maududi]]
+[[ur:سید ابو الاعلیٰ مودودی]]
