/* چاپ شوي آثار */

--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -30,7 +30,7 @@
 پښتو ژباړي
 
 #اسلامي سیات - د مولانا ګوهر الرحمن اثر - پښتو ژباړه قريب الرحمن سعيد
-#اسلامي ریاست - د مولانا [[ابوالاعلي مودودي]] اثر - پښتو ژباړه قريب الرحمن سعيد 
+#اسلامي ریاست - د مولانا [[ابو الاعلى مودودي]] اثر - پښتو ژباړه قريب الرحمن سعيد 
 #خلافت او ملوکیت - د مولانا ابوالاعلي مودودي اثر - پښتو ژباړه قريب الرحمن سعيد
 #پرده - د مولانا ابوالاعلي مودودي اثر - پښتو ژباړه قريب الرحمن سعيد
 #د حدیثو د انکار نه د قران تر انکاره پورې - د مولانا عبدالسلام رستمي اثر - پښتو ژباړه قريب الرحمن سعيد
