/* د علامه مودودي پښتو ژباړل شوي کتابونه */

--- a/ابو_الاعلى_مودودي.mw
+++ b/ابو_الاعلى_مودودي.mw
@@ -71,7 +71,7 @@
 * [[خطبات حرم]]
 
 ==د علامه مودودي پښتو ژباړل شوي کتابونه==
-#اسلامي سياست - ليکوال - مولانا گوهر الرحمٰن- ژباړن - استاد قريب الرحمن سعيد
+#اسلامي سياست - ليکوال - مولانا گوهر الرحمٰن- ژباړن - استاد [[قريب الرحمن سعيد]]
 #د سلامتې لار
 #یو خطب
 #د حق شادت
