*Empty MediaWiki Message*

--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -1,3 +1,4 @@
+[[دوتنه:قريب_الرحمن_سعيد.JPG]]
 '''قريب الرحمن سعيد''' (۲۰ د جون ۱۹۵۲) د ننګرهار ولايت يو پښتون ژورنالست، ليکوال او ژباړونکی دی. هغه په افغانستان کې دننه او د افغانستان نه دباندې په افغاني رسنيو کې منظمې ليکنې هم خپرې کړي او د نورو ژبو نه يې يو شمېر کتابونه هم پښتو ژبې ته ژباړلي دي.
 
 == مخينه ==
