--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -20,12 +20,7 @@
 #داطلاعاتو او کلتور د وزارت د کمیسیون رئیس  او ددغه وزارت سرپرست  وزیر .
  
 == ځانګړي وړتوبونه ==
-(۳)د لندن په (Kingsway-Princeton college) کالج کې د انګلیسي ژبې  زده کړې .
-
-(۴)د امریکا د نبراسکا د پوهنتون د سکالرشپ  لاندې د انګلیسې ژبې د زده کړې کورسونه (۱۹۹۱)
-
-(۵)د ناروې د اوسلو د پوهنتون د ټولنیزو علومو د پوهنځې څخه د سیاسې او ټولنیز اقتصاد دوهم لسانس او د ماسټرۍ ددورې کورسونه (۲۰۰۸)ز.  دا کورسونه  تر اوسه هم  جریان لري ، که زما صحت او دلیکوالۍ مصروفیتونه  اجازه را کړي نو انشاءالله چې تر سره به یې کړم .  
-
+قريب الرحمن سعيد د لندن په (Kingsway-Princeton college) کالج کې د انګلیسي ژبه زده کړې همدا راز په ۱۹۹۱ ز. کال کې د امریکا د نبراسکا د پوهنتون د سکالرشپ  له مخې د انګلیسې ژبې د زده کړې کورسونه بشپړ کړي. هغه د خپلې مورنۍ ژبې تر څنګ په فارسي، عربي، اردو، انګرېزي او ناروېژي ژبه ښه پوهېږي او خپلې ليکنې هم پرې کولای شي.
 
 == چاپ شوي آثار ==
 
