*Empty MediaWiki Message*

--- a/دوتنه:غوث_خيبري.jpg.mw
+++ b/دوتنه:غوث_خيبري.jpg.mw
@@ -1,5 +1,5 @@
 غوث خيبري يو پښتون ليکوال او څېړونکی دی.
 
-وېشنيزه:پښتانه
-وېشنيزه:پښتانه ليکوال
-وېشنيزه:افغانان
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:افغانان]]
