*Empty MediaWiki Message*

--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -1,4 +1,4 @@
-[[Image:قريب_الرحمن_سعيد.JPG|thumb|289px|قريب الرحمن سعيد]]
+[[انځور:قريب_الرحمن_سعيد.JPG|thumb|289px|قريب الرحمن سعيد]]
 
 '''قريب الرحمن سعيد''' (۲۰ د جون ۱۹۵۲) د ننګرهار ولايت يو پښتون ژورنالست، ليکوال او ژباړونکی دی. هغه په افغانستان کې دننه او د افغانستان نه دباندې په افغاني رسنيو کې منظمې ليکنې هم خپرې کړي او د نورو ژبو نه يې يو شمېر کتابونه هم پښتو ژبې ته ژباړلي دي.
 
