*Empty MediaWiki Message*

--- a/غوث_خيبري.mw
+++ b/غوث_خيبري.mw
@@ -1,3 +1,5 @@
+[[انځور:غوث خيبري.jpg|thumb|289px|غوث خيبري]]
+
 '''غوث خيبري''' يو افغان ليکوال او د [[راډيو افغانستان]] د [[پښتونستان]] د خپرونې او د [[هند]] [[د آل انډيا راډيو]] د پښتو خپرونې پخوانی وياند دی. هغه د کيسو ګڼ شمېر کتابونه ليکلي او همداراز يې د مستندو تاریخي کيسو هم يو شمېر کتابونه چاپ شوي. 
 
 == مخينه ==
