--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -10,15 +10,15 @@
 
 == دندې ==
 #د ننګرهاد د ولایت د روداتود ولسوالۍ د احداد په لیسه کې د کیمیا اوریاضې استاد.
-#دروسې سره فوځ د یرغلګرو ځواکونو  پر خلاف د بین المللې مطبوعاتو سره د اړیکو مسئول.
+#پر افغانستان کې د روسي پوځ د یرغل پر خلاف د نړېوالو رسنيو سره د اړیکو مسئول.
 #د مطبوعاتو او معلوماتو (Press and information) د دفتر عمومې مشر.
-#د هجرت داردو ژبې مجلي  بنسټ ایښوونکې او مسئول مدیر
+#د هجرت د اردو ژبې مجلي  بنسټ ایښوونکې او مسئول مدیر.
 #د افغان خبرې اژانس (Afghan News Agency  ANA) بنسټ ایښوونکې او عمومې مشر
-#د روزنیزه او ټولنیزه  مؤسسو او په ځانګړې توګه د مهاجرینو د کوچنیانو د فعالو  سره یو فعاله ونډه  اخستونکې
-#دافغانستان د ازادۍ د ویاړلي ګوند، حزب اسلامې افغانستان د اجرائیه شورا غړې ، ددې ګوند د فرهنګي کمیټې  مشر  اود همدې ویاړلي ګوند  ویاند.
-#د افغانستان  د عظمې صدارت د مطبوعاتو  عمومې رئیس او د صدراعظم  ویاند.
-#داطلاعاتو او کلتور د وزارت د کمیسیون رئیس  او ددغه وزارت سرپرست  وزیر .
- 
+#د روزنیزه او ټولنیزه  مؤسسو او په ځانګړې توګه د مهاجرینو د کوچنیانو د فعالو  سره یو فعاله ونډه اخستونکې.
+#د افغانستان د [[حزب اسلامې]] د اجرائیه شورا غړی ، د دې ګوند د فرهنګي کمیټې مشر او د همدې ګوند ویاند.
+#د افغانستان  د عظمې صدارت د مطبوعاتو  عمومې رئیس او د صدراعظم ویاند.
+#د اطلاعاتو او کلتور د وزارت د کمیسیون رئیس او د دغه وزارت سرپرست وزیر.
+
 == ځانګړي وړتوبونه ==
 قريب الرحمن سعيد د لندن په (Kingsway-Princeton college) کالج کې د انګلیسي ژبه زده کړې همدا راز په ۱۹۹۱ ز. کال کې د امریکا د نبراسکا د پوهنتون د سکالرشپ  له مخې د انګلیسې ژبې د زده کړې کورسونه بشپړ کړي. هغه د خپلې مورنۍ ژبې تر څنګ په فارسي، عربي، اردو، انګرېزي او ناروېژي ژبه ښه پوهېږي او خپلې ليکنې هم پرې کولای شي.
 
