--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -15,7 +15,7 @@
 #د هجرت د اردو ژبې مجلي  بنسټ ایښوونکې او مسئول مدیر.
 #د افغان خبرې اژانس (Afghan News Agency  ANA) بنسټ ایښوونکې او عمومې مشر
 #د روزنیزه او ټولنیزه  مؤسسو او په ځانګړې توګه د مهاجرینو د کوچنیانو د فعالو  سره یو فعاله ونډه اخستونکې.
-#د افغانستان د [[حزب اسلامې]] د اجرائیه شورا غړی ، د دې ګوند د فرهنګي کمیټې مشر او د همدې ګوند ویاند.
+#د افغانستان د [[د افغانستان اسلامي حزب|حزب اسلامې]] د اجرائیه شورا غړی ، د دې ګوند د فرهنګي کمیټې مشر او د همدې ګوند ویاند.
 #د افغانستان  د عظمې صدارت د مطبوعاتو  عمومې رئیس او د صدراعظم ویاند.
 #د اطلاعاتو او کلتور د وزارت د کمیسیون رئیس او د دغه وزارت سرپرست وزیر.
 
