--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -30,7 +30,7 @@
 حكمتيار تر پېنځم ټولګي پورې د امام صېب په منځني ښوونځي كې زده كړې وكړې. له پينځم ټولګي څخه وروسته د حربي ښوونځي لپاره غوره شو. شپږمن، اووم او اتم ټولګي يې په نوموړي ښوونځي كې ولوستل او د نهم ټولګي لپاره د شېرخان لېسې ته ولاړ. د ښوونځي د دزه كړې ترڅنګ يې لومړنۍ زده كړې له ارواښاد مولوي قربان محمد څخه وكړې، چې د چاه آب نوموړې عالم ؤ. نوموړي عالم چې د افغانستان له لرغوني او وخت له تاريخ څخه خبر سړې ؤ د حكمتيار په فكري او سياسي روزنه كې پوره ونډه لرله.
 
 == زده کړې ==
-د شېرخان له لېسې څخه په فارغېدو سره د پري انجينيري كورس لپاره كابل ته ولاړ. دا كورس د هغو زده كړيالو لپاره ؤ چې د انجينيرۍ پوهنځي لپاره غوره كېدل، او ر انجينيري پوهنځي لپاره لومړنۍ پېر ؤ. پدې پېر كې زده كړيال د انجينيرۍ پوهنځي لپاره تيارېدل او اړينه ګڼل كېده. حكمتيار لدې كورس څخه په لومړۍ مقام فارغ او په انجينيرۍ پوهنځي كې ورګډشو.  
+د شېرخان له لېسې څخه په فارغېدو سره د پري انجينيري كورس لپاره كابل ته ولاړ. دا كورس د هغو زده كړيالو لپاره ؤ چې د انجينيرۍ پوهنځي لپاره غوره كېدل، اوانجينيري پوهنځي لپاره لومړنۍ پېر ؤ. پدې پېر كې زده كړيال د انجينيرۍ پوهنځي لپاره تيارېدل او اړينه ګڼل كېده. حكمتيار لدې كورس څخه په لومړۍ مقام فارغ او په انجينيرۍ پوهنځي كې ورګډشو.
 
 == سياسي ډګر ته ننوتنه ==
 حكمتيار لا د ښوونځي زده كوونكې ؤ چې د كمونستي بړېڅو سره به يې ډغرې وهلې، چې غوره مثال يې د سلطان په نامه يو پرچمي او د عبدالحى په نامه ستمي ؤ، چې دواړه يې د لوى څښتن تعالى له شتون څخه منكر او مرتدان شوي ول، په مناقشه اومباحثه كې ماتول او د هغوي لخوا د لږو مالوماتو په لرلو سره له مناقشې لاس په سر كېدل او د وخت د ستر ستمي (عثمان لنډي) څخه غوښتنه كول ترڅو ددوي پوزه يوڅه ورپه ځاى كړي، مګر عثمان لنډې هم د ماتې له وېرې دې كار ته حاضر نشو، نه مبادا چې د يوه تنكي ځوان لخوا په خپل پوچ آند و آند كې مات او وشرمېږي.
