*Empty MediaWiki Message*

--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -1,12 +1,12 @@
 [[انځور:قريب_الرحمن_سعيد.JPG|thumb|289px|قريب الرحمن سعيد]]
 
-'''قريب الرحمن سعيد''' (۲۰ د جون ۱۹۵۲) د ننګرهار ولايت يو پښتون ژورنالست، ليکوال او ژباړونکی دی. هغه په افغانستان کې دننه او د افغانستان نه دباندې په افغاني رسنيو کې منظمې ليکنې هم خپرې کړي او د نورو ژبو نه يې يو شمېر کتابونه هم پښتو ژبې ته ژباړلي دي.
+'''قريب الرحمن سعيد''' (۲۰ د جون ۱۹۵۲) [[د ننګرهار ولايت]] يو پښتون ژورنالست، ليکوال او ژباړونکی دی. هغه په [[افغانستان]] کې دننه او د افغانستان نه دباندې په افغاني رسنيو کې منظمې ليکنې هم خپرې کړي او د نورو ژبو نه يې يو شمېر کتابونه هم پښتو ژبې ته ژباړلي دي.
 
 == مخينه ==
-د قريب الرحمن سعيد پخوانی تخلص مولوي زاده ؤ چې د جهاد په وختونو کې يې سعيد غوره کړی. هغه د مولوي ګل رحمن ديوبندي زوی دی. نوموړی د افغانستان د ننګرهار ولايت د روداتو د ولسوالۍ په شارسول کلي کې زېږېدلی دی. د نوموړي پلار مولوي ګل رحمن ديوبندي د خپل وخت يو لوی عالم، ښه ليکوال او شاعر ؤ. 
+د قريب الرحمن سعيد پخوانی تخلص مولوي زاده ؤ چې د جهاد په وختونو کې يې سعيد غوره کړی. هغه د مولوي ګل رحمن ديوبندي زوی دی. نوموړی د افغانستان د ننګرهار ولايت د [[د روداتو ولسوالۍ|روداتو]] د ولسوالۍ په شارسول کلي کې زېږېدلی دی. د نوموړي پلار [[مولوي ګل رحمن ديوبندي]] د خپل وخت يو لوی عالم، ښه ليکوال او شاعر ؤ. 
 
 == زده کړې ==
-خپلې لومړنۍ زده کړې يې د روداتو د ولسوالۍ د احداد په لومړني او منځني ښوونځي کې سر ته رسولي بيا د ننګرهار ليسې نه يې د ۱۲ ټولګي بريليک اخيستی. د لوړو زده کړو پيل يې د کابل په پوهنتون کې د ساينس فاکولتې د کيميا او شمېرپوهنې په څانګه کې کړی چې په ۱۹۷۵ ز. کال کې له همدغې پوهنځي نه بريالی راوتلی. تر دې وروسته په ۱۹۸۴ ز. کال کې يې د لندند په سټي يونېورسټي (د لندن د ښار پوهنتون) کې د ژورناليزم ۸ اونيزه کورس بشپړ کړی چې په دې څانګه کې يې د ماسټرۍ تر کچې کورسونه لوستي دي. په ۲۰۰۸ ز. کال کې په ناروې کې د اوسلو په پوهنتون کې د ټولنيزو پوهنو د پوهنځي څخه د سياسي او ټولنيز اقتصاد دوهم ليسانس ترلاسه کړی او دم مهال په همدې څانګه کې خپل د ماسټرۍ د بريليک په لاس ته راوړلو بوخت دی. 
+خپلې لومړنۍ زده کړې يې د روداتو د ولسوالۍ د احداد په لومړني او منځني ښوونځي کې سر ته رسولي بيا د ننګرهار ليسې نه يې د ۱۲ ټولګي بريليک اخيستی. د لوړو زده کړو پيل يې [[د کابل پوهنتون|د کابل په پوهنتون]] کې د ساينس فاکولتې د [[کيميا]] او [[شمېرپوهنه|شمېرپوهنې]] په څانګه کې کړی چې په ۱۹۷۵ ز. کال کې له همدغې پوهنځي نه بريالی راوتلی. تر دې وروسته په ۱۹۸۴ ز. کال کې يې د لندند په سټي يونېورسټي (د لندن د ښار پوهنتون) کې د ژورناليزم ۸ اونيزه کورس بشپړ کړی چې په دې څانګه کې يې د ماسټرۍ تر کچې کورسونه لوستي دي. په ۲۰۰۸ ز. کال کې په ناروې کې [[د اوسلو پوهنتون|د اوسلو په پوهنتون]] کې د ټولنيزو پوهنو د پوهنځي څخه د سياسي او ټولنيز اقتصاد دوهم ليسانس ترلاسه کړی او دم مهال په همدې څانګه کې خپل د ماسټرۍ د بريليک په لاس ته راوړلو بوخت دی. 
 
 == دندې ==
 #د ننګرهاد د ولایت د روداتود ولسوالۍ د احداد په لیسه کې د کیمیا اوریاضې استاد.
@@ -26,7 +26,7 @@
 
 پښتو ژباړي
 
-#اسلامي سیات - د مولانا ګوهر الرحمن اثر - پښتو ژباړه قريب الرحمن سعيد
+#اسلامي سیاست - د مولانا ګوهر الرحمن اثر - پښتو ژباړه قريب الرحمن سعيد
 #اسلامي ریاست - د مولانا [[ابو الاعلى مودودي]] اثر - پښتو ژباړه قريب الرحمن سعيد 
 #خلافت او ملوکیت - د مولانا ابوالاعلي مودودي اثر - پښتو ژباړه قريب الرحمن سعيد
 #پرده - د مولانا ابوالاعلي مودودي اثر - پښتو ژباړه قريب الرحمن سعيد
