/* پوهنیز او ديني ليكنې: */

--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -88,7 +88,7 @@
 په لاندې ډول به د هغو كتابونو نومونه ياد كړو چې دوي ليكلي:
 
 
-===پوهنیز او ديني ليكنې:===
+=== پوهنیز او ديني ليكنې ===
 # کليد قرآن 
 # دقرآن قَسَمونه 
 # انفاق در قرآن 
@@ -113,7 +113,8 @@
 # دقرآن پلوشې لومړې ټوک (د الفاتحه سورت ، البقره او النسأ) سورتونو تفسیر دی.
 # دقرآن پلوشې دویم ټوک (د المائده، الانعام،الاعراف او الانفال) سورتونو تفسیر دی.
 # بايبل د قرآن په رڼا کې ( بهترين شهکارعلمى ، سياسى و تحقيقى در ٨٧١ صفحه بزرگ )
-# جلوه هايى ازاسرار قرآن جزء ٢٩و ٣٠  ( او پښتو یې(( د قرآن پلوشې )) هر یو په دوه، دوه ټوکو کې)  
+# جلوه هايى ازاسرار قرآن جزء ٢٩و ٣٠  ( او پښتو یې(( د قرآن پلوشې )) هر یو په دوه، دوه ټوکو کې)
+
 ===سیاسي لیکنې===
 # موالات؟
 # عقيدۀ ما 
