--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -81,7 +81,7 @@
 
 ==ادبي ژوند==
 
-حكمتيار صېب له خپل سياسي او جهادي ژوند سره سره ليك ليكنې ته بشپړ وخت وركړې، او خپل سياسي، جهادي، ديني او ټولنيز موضوعات يې د قلم ژبې ته وركړي، او ښې ډېرې ليكنې يې كړي، چې د اټكل له مخې يۍ شمېره ۱۰۰ سلو ډول، ډول موضوعاتو ته رسېږي. 
+حكمتيار له خپل سياسي او جهادي ژوند سره سره ليك ليكنې ته بشپړ وخت وركړې، او خپل سياسي، جهادي، ديني او ټولنيز موضوعات يې د قلم ژبې ته وركړي، او ښې ډېرې ليكنې يې كړي، چې د اټكل له مخې يۍ شمېره ۱۰۰ سلو ډول، ډول موضوعاتو ته رسېږي. 
 
 د افغانستان په سياسي، ديني او ټولنيز بهير كې به دا لومړنې كس وي، چې دومره ستر كار ترسره كوي.
 
