--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -13,7 +13,7 @@
 | spouse =
 | ګوند =[[حزب اسلامي]]
 }}
-'''ګلبدين حكمتيار''' (۱۳۲۷ هـ. ل.) د افغانستان د اسلامي حزب مشر دی. کله چې په ۱۹۷۹ ز. کال کې روسي پوځونو پر افغانستان يرغل وکړ، نو ګلبدين حکمتيار هم د ګڼ شمېر نورو افغانو مجاهدينو سره له هېواد نه دباندې ګاونډيو هېوادونو ته کډوال شول او له هماغه ځايونو نه يې د روسي سره لښکرو پر ضد د جهاد اعلان وکړ. نوموړی د افغانستان په سياسي تاريخ کې هم يوه پېژندل شوې څېره ده او ګڼ شمېر افغانان د ده له نوم سره اشنايي لري. 
+'''ګلبدين حكمتيار''' (۱۳۲۷ هـ. ل.) د افغانستان د اسلامي حزب مشر دی. کله چې په ۱۹۷۹ ز. کال کې روسي پوځونو پر افغانستان يرغل وکړ، نو ګلبدين حکمتيار هم د ګڼ شمېر نورو افغانو مجاهدينو سره له هېواد نه دباندې ګاونډيو هېوادونو ته کډوال شو او له هماغه ځايونو نه يې د روسي سره لښکرو پر ضد د جهاد اعلان وکړ. نوموړی د افغانستان په سياسي تاريخ کې هم يوه پېژندل شوې څېره ده او ګڼ شمېر افغانان د ده له نوم سره اشنايي لري. 
 
 == مخينه ==
 هغه د شهيد عبدالقادرخان زوي په ۱۳۲۷ هجري لمريز كال د كندوز ولايت د حضرت امام صېب ولسوالۍ د ورته بز په كلي كې زېږېدلې دى. نوموړی د څو لسيزو نه راپدېخوا د افغانستان په سياسي چارو کې راښکېل دی. خو تر ټولو ډېر هغه وخت مشهور شو کله چې روسانو پر [[افغانستان]] باندې يرغل وکړ او دی د سرولښکرو پر وړاندې د جهاد تکل وکړ. ددې سره سره دی د افغانستان پخوانی لومړی وزير هم پاتې شوی.
