--- a/جلالکوټ.mw
+++ b/جلالکوټ.mw
@@ -16,7 +16,7 @@
 د افغانستان خپلواکۍ ګټلو څخه وروسته لومړنۍ لویه جرګه په ۱۳۰۱ل، چې له ۱۹۲۰ز کال سره سمون خوري، په همدې ښار کې جوړه شوه. 
 
 
-سراج العمارت د [[امیر حبیب الله خان]] او [[امیر امان الله خان]] د اوسېدا ځای په [[۱۹۲۹ز]] کال رنګ او وسوزول شو. بل د یادولو وړ بڼ چې ددې امیرانو کورنۍ پورې اړه لري د امیر شهید بڼ دی. دا بڼ د نوموړو امیرانو پلرنۍ هدیره هم ګڼلې شو، ځکه چې پدې بڼ کې د [[امیر امان الله خان]]،[[امیر حبیب الله خان]]، [[سردار نصر الله خان]]، د امان الله خان ماندینه، خور یې نجیبه سراج هم پدې هدیره کې په ابدي خوب ویده دی.
+سراج العمارت د [[امیر حبیب الله خان]] او امیر [[امان الله خان]] د اوسېدا ځای په [[۱۹۲۹ز]] کال رنګ او وسوزول شو. بل د یادولو وړ بڼ چې ددې امیرانو کورنۍ پورې اړه لري د امیر شهید بڼ دی. دا بڼ د نوموړو امیرانو پلرنۍ هدیره هم ګڼلې شو، ځکه چې پدې بڼ کې د [[امیر امان الله خان]]،[[امیر حبیب الله خان]]، [[سردار نصر الله خان]]، د امان الله خان ماندینه، خور یې نجیبه سراج هم پدې هدیره کې په ابدي خوب ویده دی.
 
 د یادولو وړه د، چې د افغان جهاد قومندان او پښتون مین مشر [[حاجي عبد القدیر]] هم په دې هدیره کې خاورو ته سپارل شوې دی.
 
