--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -38,6 +38,11 @@
 #زیات شمیر  پښتو مضامین  او دانګلیسې  او د اردو ژبو څخه ژباړل شوې مقالې او لیکنې چې  د شهادت او وحدت  په ورځپاڼو او یو شمیر  اونیزو او میاشتنیزو کې  خپاره شوې دي.
 
 == باندنۍ تړنې ==
+*[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm د انقلاب حکمت] - د لر او بر د وېبپانې برېښنايي کتابتون
+*[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm د انقلاب حکمت] - د لر او بر د وېبپانې برېښنايي کتابتون
+*[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm د انقلاب حکمت] - د لر او بر د وېبپانې برېښنايي کتابتون
+*[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm د انقلاب حکمت] - د لر او بر د وېبپانې برېښنايي کتابتون
+*[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm د انقلاب حکمت] - د لر او بر د وېبپانې برېښنايي کتابتون
 
 
 [[وېشنيزه:پښتانه]]
