--- a/قريب_الرحمن_سعيد.mw
+++ b/قريب_الرحمن_سعيد.mw
@@ -39,7 +39,7 @@
 
 == باندنۍ تړنې ==
 *[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm د انقلاب حکمت] - د لر او بر د وېبپانې برېښنايي کتابتون
-*[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm د انقلاب حکمت] - د لر او بر د وېبپانې برېښنايي کتابتون
+*[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm  د سلطان صلاح الدين ايوبي د وخت ريښتوني پېښي] - د لر او بر د وېبپانې برېښنايي کتابتون
 *[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm د انقلاب حکمت] - د لر او بر د وېبپانې برېښنايي کتابتون
 *[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm د انقلاب حکمت] - د لر او بر د وېبپانې برېښنايي کتابتون
 *[http://larawbar.com/data/library/religious/qr.saeed_seerat_u_nabi/qr.saeed_seerat_u_nabi.htm د انقلاب حکمت] - د لر او بر د وېبپانې برېښنايي کتابتون
