--- a/صفيه_حليم.mw
+++ b/صفيه_حليم.mw
@@ -1,4 +1,4 @@
-'''ميرمن صفيه حليم''' د پښتو ژبې يوه شاعره او ليکواله او ژباړونکې ده. د ليکوالۍ او شاعرۍ تر څنګ په لندن کې د بي بي سي د پښتو راډيويي خپرونو ويانده او وړاندې کوونکې هم ده. 
+'''ميرمن صفيه حليم''' د پښتو ژبې يوه شاعره ، ليکواله او ژباړونکې ده. د ليکوالۍ او شاعرۍ تر څنګ په لندن کې د بي بي سي د پښتو راډيويي خپرونو ويانده او وړاندې کوونکې هم ده. 
 
 == مخينه او زده کړې ==
 نوموړې په پېښور کې زيږيدلې ده. د پېښور په پوهنتون کې يې زده کړي دي او وروسته په همغۀ ښار کې د يوۀ ښوونځي ښوونکې وه خو د سکاټلينډ په يوه پوهنتون کې يې د نورو زده کړو لپاره بورس ترلاسه کړ . تر هغه وروسته په لندن کې د بي بي سي پښتو خپرونې ته راغله او تر ٢٠٠٣ کال پورې هلته وه چې په وروستۍو کلونو کې يې مشري هم په غاړه لرله.
