--- a/مسيحيت.mw
+++ b/مسيحيت.mw
@@ -298,7 +298,7 @@ Basic writing of St. Augstine, Trans by: A.W. Haddan & edited by Whitney, Newyor
 [[vi:Kitô giáo]]
 [[vls:Christndom]]
 [[wa:Crustinnisse]]
-[[war:Kristiyanismo]]
+[[war:Kristyanismo]]
 [[yi:קריסטנטום]]
 [[yo:Ẹ̀sìn Kristi]]
 [[zh:基督教]]
