*Empty MediaWiki Message*

--- a/محمد_زرين_انځور.mw
+++ b/محمد_زرين_انځور.mw
@@ -1,38 +1,47 @@
-'''محمد زرين انځور''' په ١٣٣٥ لمريز هجري کال ( ١٩٥٦ ع ) کې د ننګرهار ولايت د مومند درې ولسوالۍ د ګردي غوث په کلي کې په يوه منوره کورنۍ کې زېږېدلی دی . پلار يې الحاج عبداللطيف ګرديوال اوږده کلونه د افغانستان د پوهنې د ودې لپاره خدمتونه کړي دي. د هېواد په بېلابيلو سيمو او په تېره بيا په ختيځو ولايتونو کې يې د ښوونکي، پلټونکي او مفتش او په وروستيو کې د ننګرهار د پوهنې د مرستيال په توګه دندې تر سره کړې دي .
+'''محمد زرين انځور''' (١٣٣٥ ل. هـ. کال = ١٩٥٦ ز. کال)  يو افغان ژورناليست، کيسه ليکونکی، کره کتونکی او څېړونکی دی. هغه دم مهال په افغانستان کې د ښوونې او روزنې په وزارت کې کار کوي.
+
+== مخينه ==
+هغه [[د ننګرهار ولايت]] [[د مومند درې ولسوالۍ]] د [[د ګردي غوث کلی|ګردي غوث]] په کلي کې زېږېدلی دی. د پلار نوم يې الحاج عبداللطيف ګرديوال دی چې هغه ډېر وخت يې د افغانستان د پوهنې د ودې او پرمختګ په لار خدمتونه کړي دي. د هېواد په بېلابيلو سيمو او په تېره بيا په ختيځو ولايتونو کې يې د ښوونکي، پلټونکي او مفتش او په وروستيو کې د ننګرهار د پوهنې د مرستيال په توګه دندې تر سره کړې دي. زرين انځور له ١٩٩٥ ز. کال (١٩٧٤ لمريز) راهيسې له خپلې کورنۍ سره ، د جرمني د کولن په ښار کې اوسي.
 
 == زده کړې ==
-ښاغلي زرين انځور خپلې لومړنۍ زده کړې د هغه وخت (( د ګردي غوث په لومړني ښوونځي )) کې تر سره کړې دي . منځنۍ او ثانوي زده کړې يې د ننګرهار په (( ايمل خان لېسه )) کې د ١٣٥٢ په جوزا کې پای ته ورسولې . په ١٣٥٣ لمريز کال کې يې د کابل پوهنتون د ادبياتو او بشري علومو په پوهنځي کې زده کړې پيل کړې او د ١٣٥٦ کال په پای کې يې د دغه پوهنتون د ژورناليزم له څانګې څخه د ليسانس سند واخيست . کله چې ښاغلی انځور پېښور ته مهاجر شو نو د هجرت په کلونو کې يې له پېښور پوهنتون څخه په پښتو ژبه او ادبياتو کې ماسټري هم واخيستله.
+زرين انځور خپلې لومړنۍ زده کړې د ګردي غوث په لومړني ښوونځي کې تر سره کړې دي. منځوۍ او دويمې زده کړې يې په ۱۳۵۲ ل. کال د ننګرهار ولايت د ايمل خان په لېسه کې پای ته رسولي بيا يې په ١٣٥٣ ل. کال کې [[د کابل پوهنتون]] د ادبياتو او بشري علومو په پوهنځي کې زده کړې پيل کړي چې په ١٣٥٦ ل. کال کې د ژورناليزم له څانګې خپل د ليسانس سند لاس ته راوړی. تر دې وروسته يې بيا په پېښور کې د کډوالۍ په کلونو کې د پېښور له پوهنتون نه د پښتو ژبې او ادبياتو په څانګه کې خپل د ماسټرۍ بريليک ترلاسه کړی.
 
 == دندې ==
-نږدې لس کاله يې د افغانستان په راډيو او تلويزيون کې د راډيو افغانستان د هنر او ادبياتو په اداره کې د ادبي خپرونو د پروډيوسر او بيا ليکوال په توګه کار کړی دی . په ١٣٦٦ کال کې د افغانستان د ليکوالو ټولنې د ادبي نقد او ادبي څېړنو د څانګې مشرشو او له هېواده تر وتلو پورې يې دغه دنده سنبال کړه .
-په ١٣٦٨ لمريز کال کې پېښور ته مهاجر شو او د ازاد افغانستان د ليکوالو ټولنې د خپرني ارګان ((خپلواکۍ )) مجله يې څلور کاله وچلوله . په پېښور کې يې د يو شمېر نورو افغان ليکوالو لکه : هر يو ښاغلي [[محمد صديق پسرلی]]، [[حبيب الله رفيع]] ، [[محمد آصف صميم]] او [[امان الله ساهو]] سره په ګډه (( د افغانستان کلتوري ټولنه )) جوړه کړه چې دغې ټولنې د (( سپېدې )) په نوم ادبي _ کلتوري مجله خپروله او دغه راز يې د افغانستان د مقاومت د ادبياتو د ودې او پياوړتيا لپاره غونډې او سيمينارونه جوړول .
-ښاغلی زرين انځور له ١٩٩٥ کال ( ١٩٧٤ لمريز ) راهيسې له خپلې کورنۍ سره ، د جرمني د کولن په ښار کې اوسي . له ١٩٩٨ ع کال راهيسې يې له يو ګڼ شمير فرهنګيانو او فرهنګپالو سره په ګډه په جرمني کې د افغانستان د کلتوري ودې ټولنه جوړه کړې ده چې تر اوسه يې په لسګونو مهم اثار په پښتو خپاره کړي او يو زيات شمېر ملي _ کلتوري غونډې او سيمينارونه يې جوړ کړي دي .
-ښاغلي زرين انځور لا هغه وخت شعرونه ويل او ليکنې يې کولې چې د ښوونځي شاګرد و، خو هغه اثار يې خپاره شوي نه وو، په کابل پوهنتون کې له زده کړو سره سم يې د افغانستان په مطبوعاتو کې ليکنې او شعرونه خپاره شول . لومړنۍ ليکنې ، شعرونه او لنډې کيسې يې په ١٣٥٤ لمريز کال کې لومړی په ((ننګرهار )) مجله او بيا په ترتيب سره په : زيري جريده، کابل ، پکتيا ، کندهار ، پلوشه او نورو بيلابېلو مجلوکې او بيا په راډيويي او تلويزيوني خپرونو کې خپاره شوي دي .
-
-== ادبي کارونه ==
-د ادبي کار او زيار ډېره برخه يې پښتو کيسه ليکنې او د معاصرو پښتو ادبياتو نقد ( کره کتنې ) او څېړنې ته ځانګړې شوې ده . او دغه راز يې په نورو بېلابېلو ادبي او کلتوري برخو کې هم څېړنې او ليکنې کړې دي . 
-د دغه افغان ليکوال او ژورناليست دغه ځانګړي اثار تر اوسه پورې په کتابي بڼه چاپ او خپاره شوي دي :
-# دا سرونه ، دا رسمونه : دلنډو کيسو لومړۍ ټولګه، کابل، د١٣٦٣ ل چاپ،
-# شاړې کوڅې ، د لنډو کيسو دويمه ټولګه، کابل، د١٣٦٧ ل چاپ ،
-# تروږمۍ ، د لنډو کيسو درېيمه ټولګه ، پېښور ، د ١٣٦٩ ل چاپ ،
-# زموږ د کلي پاڼې ، د لنډو کيسو څلورمه ټولګه ، پېښور ، د ١٣٧٢ ل چاپ ،
-# دلته غرونه نه دي هسک ، د لنډو کيسو پنځمه ټولګه ، پېښور ، د ١٣٧٩ ل چاپ،
-# د غزل په اننګو کې، د استاد حمزه شينواري د غزلياتو څېړنه او غور چاڼ، کابل، د ١٣٦٤ ل چاپ،
-# د شريف ديوان ، د ننګرهار ددغه اولسي شاعر د شعرونو جونګ، کابل، د ١٣٦٣ ل چاپ،
-# هجري _ د زنځيرونو شاعر، کابل، د ١٣٦٤ ل چاپ،
-# اباسين کيسې کوي، د پښتونخوا د کيسه ليکنې غورچاڼ او څېړنه، کابل، د ١٣٦٤ ل چاپ،
-# شعرونه او نقدونه ، د معاصر پښتو شعر کره کتنه، کابل، د ١٣٦٥ ل چاپ،
-# د افغانستان د ژورناليزم مخکښان، کابل، د ١٣٦٥ ل چاپ،
-# د مهدي داستاني کليات ( تدوين او سريزه)، کابل، د ١٣٦٧ ل چاپ،
-# يون ( د استاد حمزه د غزليزې ټولګې تدوين او سريزه )، کابل، د ١٣٦٦ ل چاپ،
-# خپلواک غږونه (له ښاغلي زلمي هېوادمل سره په ګډه) ، انتخاب او سريزه، کابل، د ١٣٦٨ ل چاپ،
-# د پټې خزانې ميزان ريښتيا ميزان دی؟ ( له ښاغلي محمد اصف صميم سره په ګډه)، پېښور، د ١٣٦٩ ل چاپ،
-# د ثور په تراژيدۍ کې فرهنګ، ادبيات او ازادي ، پېښور، د ١٣٧٢ ل چاپ،
-# د صدر خوشال ژوند او اثار، پېښور، د ١٩٩٦ع چاپ .
-# راروان دي تور بادونه - د لنډو کيسو ټولګه - چاپکال ۲۰۰۹ ز
-دښاغلي  زرين انځورپه سلګونو مقالې د هېواد په مطبوعاتو کې او دغه راز له هېواده بهر مطبوعاتو کې چاپ او خپرې شوې دي .
+نږدې لس کاله يې د [[راډيو افغانستان]] د هنر او ادبياتو په اداره کې د ادبي خپرونو د چمتوکوونکي او ليکوال په توګه کار کړی دی. په ١٣٦٦ ل. کال کې د افغانستان د ليکوالو ټولنې د ادبي نقد او ادبي څېړنو د څانګې مشر ؤ. نوموړي په ١٣٦٨ ل. کال کې پېښور ته کډوال شو او د آزاد افغانستان د ليکوالو ټولنې د خپرنيز ارګان خپلواکۍ مجله يې څلور کاله وچلوله. هماغلته په پېښور کې يې د يو شمېر نورو افغان ليکوالو سره په ګډه د افغانستان کلتوري ټولنه جوړه کړه چې د همدغې ټولنې د سپېدې ادبي او کلتوري مجلې په خپرولو کې يې فعاله ونډه درلوده همداراز د افغانستان د مقاومت د ادبياتو د ودې او پياوړتيا لپاره يې ادبي او پوهنيزې غونډې او سيمينارونه جوړ کړي. بيا کله چې هغه جرمني هېواد ته کډه وکړه نو په ١٩٩٨ ز. کال کې يې د يو شمير فعالو فرهنګيانو او فرهنګپالو سره په ګډه د افغانستان د کلتوري ودې ټولنه بنسټ کېښوده چې تر اوسه يې په لسګونو مهم اثار په پښتو ژبه خپاره کړي او يو زيات شمېر ملي او کلتوري غونډې او سيمينارونه يې رابللي دي.
 
 
+== ادبي ژوند ==
+زرين انځور د ښوونځي له وختونو نه شاعري او ليکوالي پيل کړې، خو هغه آثار يې خپاره شوي نه دي. کله چې هغه کابل پوهنتون ته د لوړو زده کړو لپاره راغی نو د خپلو زده کړو سره سره يې په افغاني رسنيو کې خپلې ليکنې او شعرونه خپرول. د هغه لومړنۍ ليکنې، شعرونه او لنډې کيسې په ١٣٥٤ ل. کال کې په ننګرهار مجله او بيا په زيري جريده، کابل، پکتيا، کندهار، پلوشه او نورو بيلابېلو خپرونو تر څنګ د  افغانستان په راډيويي او ټلويزوني خپرونو کې هم خپاره شوي دي.
 
-[[وېشنيزه:پښتانه ليکوالان]]
+که څه هم چې د زرين انځور د ادبي کار او زيار لويه برخه پښتو کيسه ليکنې او د نوي پښتو ادب کره کتنې او څېړنې ته ځانګړې شوې، خو هغه په نورو ادبي او کلتوري برخو کې يې هم څېړنې او ليکنې کړي او يو شمېر کتابونه يې خپاره شوي دي. 
+
+=== چاپ شوي آثار ===
+د زرين انځورپه ګڼ شمېر ليکنې د افغانستان او د هغه هېواد نه دباندې په رسنيو کې خپرې شوې دي چې شمېر يې نه دی مالوم، خو د خپرو شويو کتابونو لړليک يې په لاندې ډول دی:
+# دا سرونه، دا رسمونه - د لنډو کيسو لومړنۍ ټولګه - چاپکال ١٣٦٣ ل، کابل
+# شاړې کوڅې - د لنډو کيسو دويمه ټولګه - چاپکال ١٣٦٧ ل، کابل
+# تروږمۍ - د لنډو کيسو درېيمه ټولګه - چاپکال ١٣٦٩ ل، پېښور
+# زموږ د کلي پاڼې - د لنډو کيسو څلورمه ټولګه - چاپکال ١٣٧٢ ل، پېښور
+# دلته غرونه نه دي هسک - د لنډو کيسو پنځمه ټولګه - چاپکال ١٣٧٩ ل، پېښور
+# د غزل په اننګو کې - د [[حمزه شينواري]] د غزلياتو څېړنه او غور چاڼ - چاپکال ١٣٦٤ ل، کابل
+# د شريف ديوان - د ننګرهار د ولسي شاعر د شعرونو جونګ - چاپکال ١٣٦٣ ل، کابل
+# هجري د زنځيرونو شاعر - چاپکال ١٣٦٤ ل، کابل
+# اباسين کيسې کوي - د پښتونخوا د کيسه ليکنې غورچاڼ او څېړنه - چاپکال ١٣٦٤ ل، کابل
+# شعرونه او نقدونه - د معاصر پښتو شعر کره کتنه - چاپکال ١٣٦٥ ل، کابل
+# د افغانستان د ژورناليزم مخکښان - چاپکال ١٣٦٥ ل، کابل
+# د مهدي داستاني کليات (تدوين او سريزه) - چاپکال ١٣٦٧ ل، کابل
+# يون - د حمزه شينواري د غزليزې ټولګې تدوين او سريزه - چاپکال ١٣٦٦ ل، کابل
+# خپلواک غږونه (له ښاغلي زلمي هېوادمل سره په ګډه) - انتخاب او سريزه - چاپکال ١٣٦٨ ل، کابل
+# د پټې خزانې ميزان ريښتيا ميزان دی؟ - له [[محمد اصف صميم]] سره په ګډه - چاپکال ١٣٦٩ ل، پېښور
+# د ثور په تراژيدۍ کې فرهنګ، ادبيات او آزادي - چاپکال ١٣٧٢ ل، پېښور
+# د صدر خوشال ژوند او اثار - چاپکال ١٩٩٦ ز. پېښور
+# راروان دي تور بادونه - د لنډو کيسو ټولګه - چاپکال ۲۰۰۹ ز. پېښور
+
+=== ناچاپ آثار ===
+
+== سرچينې ==
+
+== باندنۍ تړنې ==
+
+
+[[وېشنيزه:پښتانه ليکوال]]
 [[وېشنيزه:پښتانه]]
