/* چاپ شوي آثار */

--- a/محمد_زرين_انځور.mw
+++ b/محمد_زرين_انځور.mw
@@ -22,7 +22,7 @@
 # تروږمۍ - د لنډو کيسو درېيمه ټولګه - چاپکال ١٣٦٩ ل، پېښور
 # زموږ د کلي پاڼې - د لنډو کيسو څلورمه ټولګه - چاپکال ١٣٧٢ ل، پېښور
 # دلته غرونه نه دي هسک - د لنډو کيسو پنځمه ټولګه - چاپکال ١٣٧٩ ل، پېښور
-# د غزل په اننګو کې - د [[حمزه شينواري]] د غزلياتو څېړنه او غور چاڼ - چاپکال ١٣٦٤ ل، کابل
+# د غزل په اننګو کې - د [[حمزه شينواری|حمزه شينواري]] د غزلياتو څېړنه او غور چاڼ - چاپکال ١٣٦٤ ل، کابل
 # د شريف ديوان - د ننګرهار د ولسي شاعر د شعرونو جونګ - چاپکال ١٣٦٣ ل، کابل
 # هجري د زنځيرونو شاعر - چاپکال ١٣٦٤ ل، کابل
 # اباسين کيسې کوي - د پښتونخوا د کيسه ليکنې غورچاڼ او څېړنه - چاپکال ١٣٦٤ ل، کابل
