--- a/سویلي_کوریا.mw
+++ b/سویلي_کوریا.mw
@@ -330,6 +330,7 @@ The [[Korea Republic national football team]], also known as the "[[Taeguk Warri
 [[hak:Thai-hòn mìn-koet]]
 [[he:קוריאה הדרומית]]
 [[hi:दक्षिण कोरिया]]
+[[hif:South Korea]]
 [[hr:Južna Koreja]]
 [[hsb:Južna Koreja]]
 [[ht:Kore disid]]
@@ -360,7 +361,7 @@ The [[Korea Republic national football team]], also known as the "[[Taeguk Warri
 [[lt:Pietų Korėja]]
 [[lv:Dienvidkoreja]]
 [[mg:Korea Atsimo]]
-[[mk:Јужна Кореја]]
+[[mk:Република Кореја]]
 [[ml:ദക്ഷിണ കൊറിയ]]
 [[mn:Өмнөд Солонгос]]
 [[mr:दक्षिण कोरिया]]
