*Empty MediaWiki Message*

--- a/ټرانس_امينېشن.mw
+++ b/ټرانس_امينېشن.mw
@@ -4,10 +4,10 @@
 
 د ټرانس امينېشن دويم تعامل داسې تعريفولی شو چې دا په اماين او امونيم مالګې سره د يوه اماين او يا امايډ اناينو يو نيوکليوفېلېک ادلون بدلون دی.[1] د ساري په توګه، د لومړنيو اماينو يو تعامل د لومړنيو امايډو د اناينو سره کولای شو چې د دويمو اماينو په رامېنځ ته کولو کې وکارؤ:
 
-    RNH2 + R'NH− → RR'NH + NH2−
+RNH2 + R'NH− → RR'NH + NH2−
 
-Symmetric secondary amines can be prepared using Raney nickel (2RNH2 → R2NH + NH3). And finally, quaternary ammonium salts can be dealkylated using ethanolamine:
+د رانيل نېکل په کارولو سره دويم متناظره اماين رامېنځ ته کېدای شي (2RNH2 → R2NH + NH3). او په پای کې کواټرنري امونيم مالګه د اېتانول اماين په کارولو بې الکالاينېدلای شي:
 
-    R4N+ + NH2CH2CH2OH → R3N + RN+H2CH2CH2OH
+R4N+ + NH2CH2CH2OH → R3N + RN+H2CH2CH2OH
 
-Ser and Thr are the only two amino acids that do not always undergo transamination
+سېرين او تريونين دوه داسې امينو اسيدونه دي چې تل د ټرانس امېنېشن د پروسې نه نه تېرېږي.
