*Empty MediaWiki Message*

--- a/ټرانس_امينېشن.mw
+++ b/ټرانس_امينېشن.mw
@@ -11,3 +11,6 @@ RNH2 + R'NH− → RR'NH + NH2−
 R4N+ + NH2CH2CH2OH → R3N + RN+H2CH2CH2OH
 
 سېرين او تريونين دوه داسې امينو اسيدونه دي چې تل د ټرانس امېنېشن د پروسې نه نه تېرېږي.
+
+
+[[وېشنيزه:ژونکيميا]]
