--- a/عمر_خطاب.mw
+++ b/عمر_خطاب.mw
@@ -6,7 +6,7 @@
 عمر خطاب لومړنۍ زده کړې  په حبيبيه کې بيا د عايشه درانيه کې منځينۍ زده کړې او ورپسې بيا لوړو زده کړو ته د کابل پوهنتون د اقتصاد په پوهنځي کې په بري سره ومنل شو.
 
 == شخصي ژوند ==
-عمر خطاب د درېو وروڼو خاوند دی چې يو ورور ېې په تنظيمي جنګونو کې  په مزار کې ورک شو.
+عمر خطاب درې وروڼه لري  چې يو ورور ېې په تنظيمي جنګونو کې  په مزار کې ورک شو.
 درې خويندې لري او يوه ېې وفات شوې ، دوه نورې ژوندۍ دي .
 
 == دندې ==
