/* چاپ شوي آثار */

--- a/اېمل_پسرلی.mw
+++ b/اېمل_پسرلی.mw
@@ -14,10 +14,10 @@
 
 == چاپ شوي آثار ==
 د دۀ د چاپ شويو کتابونه نومونه په دې ډول دي :
-څلورمه لار ، د لنډو کيسو ټولګه
-بې ځالې مرغۀ ، ناول
-ډالري معاش ، د ډرامو ټولګه
-يو مزل دوه نړۍ ، د لنډو کيسو ټولګه
+#څلورمه لار  - د لنډو کيسو ټولګه
+#بې ځالې مرغۀ - ناول
+#ډالري معاش  -  د ډرامو ټولګه
+#يو مزل دوه نړۍ - د لنډو کيسو ټولګه
 
 == ناچاپه آثار ==
 
