*Empty MediaWiki Message*

--- a/محمد_زرين_انځور.mw
+++ b/محمد_زرين_انځور.mw
@@ -1,3 +1,4 @@
+[[انځور:MOHAMMADZAREENANZOOR.jpg|thumb|زرين انځور|289px]]
 '''محمد زرين انځور''' (١٣٣٥ ل. هـ. کال = ١٩٥٦ ز. کال) (Mohammad Zarin Anzor) يو افغان ژورناليست، کيسه ليکونکی، کره کتونکی او څېړونکی دی. هغه دم مهال په افغانستان کې د ښوونې او روزنې په وزارت کې کار کوي.
 
 == مخينه ==
