*Empty MediaWiki Message*

--- a/شفيع_الله_بابرزی.mw
+++ b/شفيع_الله_بابرزی.mw
@@ -1,4 +1,5 @@
 {{نابشپړ}}
+[[انځور:SHAFIULLAH-BABARZAI.jpg|thumb|شفيع الله بابرزی|250px]]
 شفيع الله بابرزى د خداى بخښلي عبدالوهاب زوى په ١٣٤٠ لمريز کال د شينوارو په سپين غر ولسوالۍ کې دې دنيا ته سترگې غړولې دي.
 
 == زده کړې ==
