*Empty MediaWiki Message*

--- a/ننګرهار_ولایت.mw
+++ b/ننګرهار_ولایت.mw
@@ -10,7 +10,7 @@
 |ګڼه ګونه= 
 |ژبې= [[پښتو]]
 }} 	 	
-'''ننګرهار''' د افغانستان په څلوردېرشو ولايتونو کې د يو ولايت نوم دی. دا ولايت ددغه هېواد په ختيځه سيمه كې پروت دى او ددغه ولايت د پلازمېنې نوم [[جلالکوټ]] دی. د اټکل له مخې ددې ولايت د وګړو شمېر له ۲۰۰۰۰۰۰ نه هم ډېره ده.
+'''ننګرهار''' د افغانستان له ختيځو سرحدي ولايتونو څخه دى چۍ د پاكستان له پښتونخوا ايالت سره ګډۀ پوله لري.ددۍ ولايت منځى د جلالكوټ ښار دى. د اټکل له مخې دا ولايت له كابل څخه وروسته د هۍواد ګڼمۍشتۍ ولايت ګڼل كۍږي، چۍ د وګړو شمۍر يۍ له څه د باندۍ ۳۰۰۰۰۰۰ نه هم ډېره ده.
 
 
 == آرپوهه ==
