*Empty MediaWiki Message*

--- a/ننګرهار_ولایت.mw
+++ b/ننګرهار_ولایت.mw
@@ -10,7 +10,7 @@
 |ګڼه ګونه= 
 |ژبې= [[پښتو]]
 }} 	 	
-'''ننګرهار''' د افغانستان له ختيځو سرحدي ولايتونو څخه دى چۍ د پاكستان له پښتونخوا ايالت سره ګډۀ پوله لري.ددۍ ولايت منځى د جلالكوټ ښار دى. د اټکل له مخې دا ولايت له كابل څخه وروسته د هۍواد ګڼمۍشتۍ ولايت ګڼل كۍږي، چۍ د وګړو شمۍر يۍ له څه د باندۍ ۳۰۰۰۰۰۰ نه هم ډېره ده.
+'''ننګرهار''' د افغانستان له ختيځو سرحدي ولايتونو څخه دى چې د پاكستان له پښتونخوا ايالت سره ګډۀ پوله لري.ددې ولايت منځى د جلالكوټ ښار دى. د اټکل له مخې دا ولايت له كابل څخه وروسته د ېۍواد ګڼمۍشتۍ ولايت ګڼل كۍږي، چۍ د وګړو شمۍر يۍ له څه د باندۍ ۳۰۰۰۰۰۰ نه هم ډېره ده.
 
 
 == آرپوهه ==
