/* جغرافيه او اداري جوړښت */

--- a/ننګرهار_ولایت.mw
+++ b/ننګرهار_ولایت.mw
@@ -39,7 +39,10 @@
 ==وټه==
 
 == جغرافيه او اداري جوړښت ==
-ننګرهار په ختيځو  ولاياتو كې يو مهم ولايت دى. دا ولايت ۷۶۱۶ كيلو متر مربع مساحت لري. دا ولايت نژدې شپږ سو ه متره د بحر د سطحي څخه په جګوالي پروت دی. جلا ل اباد ښار  په شرقي طول البلد ٧٠ درجي   ٢٧ دقيقي ٥٤ سانيي  او شمالي عرض البلد ٣٤ درجي ٢٦ دقيقي  او ٢٠ سانيو کي واقع دي او د اداري وېش له مخې په لاندې  ولسواليو وېشل شوېدى.
+ننګرهار په ختيځو  ولاياتو كې يو مهم ولايت دى. دا ولايت ۷۶۱۶ كيلو متر مربع مساحت لري. دا ولايت نژدې شپږ سو ه متره د بحر د سطحي څخه په جګوالي پروت دی. جلالكوټ ښار  په ختيځ طول البلد ٧٠ درجي   ٢٧ دقيقي ٥٤ ثانيي  او شمالي عرض البلد ٣٤ درجي ٢٦ دقيقي  او ٢٠ ثانيو کي واقع دي.
+
+دا ولايت د اداري وېش له مخې په لاندې  ولسواليو وېشل شوېدى.
+
 **[[جلالکوټ]] (د ولايت مركز)
 **[[سره رود]]
 **[[بهسود]]
