/* جغرافيه او اداري جوړښت */

--- a/ننګرهار_ولایت.mw
+++ b/ننګرهار_ولایت.mw
@@ -66,6 +66,7 @@
 **[[دره نور]]
 **[[ غني خيل]]
 **[[لال پوره]]
+**[[سپين غر]]
 
 == اقليم او هوا ==
 ننګرهار د هغه د پېداوار له مخې د مديترانه يي اقليم لرونكې او د استوا د كرښې لاندې ګڼل شوېدى. ځكه چې د مالټې، نارنج، خرما، شولو او ګنيو پېداوار هلته ډېر دي. وچ او تود اوړې او معتدل باراني ژمې لري چې دا وضعه يې په هوارو ځمكو كې صدق كوي. مګر د سپين غره سيمې او د كنړ درې چې صنوبري او ستنې لرونكو پاڼو لكه لمنځه او څېړۍ په ځنګلونو پوښل شوي، ډېرې موسمي بارانونه لري، لېكن د بهسود او كامې په برخه كې ټيټ غرونه د تېرو پاڼو لرونكو ونو ځنګلونه لري.
