--- a/د_لمريز_کال_مياشتې.mw
+++ b/د_لمريز_کال_مياشتې.mw
@@ -1,6 +1,6 @@
 هر لمريز کال ([[هجری شمسی]]) له ۱۲ مياشتو نه جوړ دی چې د يوه کال لومړنۍ ۶ مياشتې ۳۱ ورځې لري او بيا ورپسې ۵ مياشتې ۳۰ ورځې او د کال وروستۍ مياشت ۲۹ ورځې لري. هر څلور کاله وروسته د کال د وروستۍ مياشت يعنې د کب په مياشت کې يوه ورځ ډېرېږي او د ټولې مياشتې د ورځو شمېر ۳۰ ورځو ته رسېږي چې همداسې يوه کال ته کبيسه کال وايي.
 
-د مياشتو نومونه په هره ژبه کې بېل بېل نومونه ځان ته لري.
+هره مياشت ځان ته په هره ژبه کې بېل بېل نومونه لري.
 چې په ترتیب سره په لاندې توګه دي:
 
 {| class="wikitable"
