/* (انا لله و انا اليه راجعون) */

--- a/محمد_موسى_شفيق.mw
+++ b/محمد_موسى_شفيق.mw
@@ -27,7 +27,7 @@
 كله چې ارواښاد د هېواد د صدر اعظم په توګه وټاكل شو هېواد له ډېرو كړكېچونو حالاتو سره لاس او ګرېوان ؤو، د هېواد دښمنان هم دى حالاتو ته ځير او په كمين كې ورته ناست ؤو، هغوي چې كله د شفيق پوهه ده حالاتو مثبت بدلون او د هېواد پرمختګ وليد دا هغه څه ؤو چې دوى ته د زغملو وړ نه ؤو, هماغه ؤو چې خداى بخلې د ۱۳۵۲ كال د چنګاښ په كودتا كې د پرچميانو له خوا زنداني شو، له دونيم كاله زندان وروسته په ۱۳۵۴ كې له زندان راخلاص شو, خو دوهم ځل د ۱۳۵۷ د ثور په خونړۍ كودتا كې بندې او د همدې مياشت په ۱۱ نيټه د زندان تورو تمبو شاته يې د شهادت جام وڅښه.
 
 
-== (انا لله و انا اليه راجعون) ==
+== مړينه ==
 
 ته شفيق ئې،ته رفيق ئې ته موسى زمونږ د طور ئې
 نوم دې ځكه د زړه سره خور د زړونو پر جهان شو
@@ -36,4 +36,4 @@
 ځكه خاورې په سر نولم د تاريخ څيرى گريوان شو.
 
 
-[[Category: پښتانه شاعران]]
+[[وېشنيزه: پښتانه شاعران]]
